tons of styling improvements, made z-indexes and most margins and padding use variables

--- a/app/assets/stylesheets/tenon/layout/assets.css.scss
+++ b/app/assets/stylesheets/tenon/layout/assets.css.scss
@@ -43,7 +43,7 @@
 
 form.edit_asset {
   display: inline-block;
-  margin: 16px 0 0;
+  margin: $tn-margin 0 0;
   width: 100%;
 
   // .preview {
@@ -64,7 +64,7 @@ form.edit_asset {
     margin: 10px 0 0 10px;
     padding: 5px 10px;
     border-radius: 15px;
-    font-size: 12px;
+    font-size: $tn-font-small;
 
     input.upload {
       position: absolute;
