--- a/app/assets/stylesheets/tenon/tenon.css.scss
+++ b/app/assets/stylesheets/tenon/tenon.css.scss
@@ -24,9 +24,11 @@
 @import 'tenon/typography';
 @import 'tenon/helpers';
 @import 'tenon/styleguide';
+@import 'tenon/z-indexes';
 
 // Layouts, try to make one for each different page type
 @import 'tenon/layout/breakpoints';
+@import 'tenon/layout/margins';
 @import 'tenon/layout/grid';
 @import 'tenon/layout/global';
 @import 'tenon/layout/dashboard';
