--- a/app/assets/stylesheets/tenon/ui/tenon-content-library.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content-library.css.scss
@@ -55,7 +55,7 @@
       a {
         position: relative;
         float: left;
-        padding: 16px;
+        padding: $tn-padding;
         width: 100%;
         color: $tn-label;
         font-size: 18px;
