--- a/app/assets/stylesheets/tenon/layout/main-nav.css.scss
+++ b/app/assets/stylesheets/tenon/layout/main-nav.css.scss
@@ -1,20 +1,17 @@
 .nav-holder {
-  @include transition(width .2s ease-in-out);
-
+  @include transition(all 0.2s ease);
   @include media($mobile-breakpoint) {
     display: none;
-
     &.mobile-open {
+      right: 0;
+      left: 0;
       display: block;
-      width: 50%;
-
+      padding-right: 65px;
+      width: auto;
+      background-color: transparentize(#000, 0.5);
       nav.main-nav {
         width: 100%;
       }
-    }
-
-    &.open {
-      width: 50%;
     }
   }
 
@@ -27,13 +24,10 @@
   position: fixed;
   top: 50px;
   left: 0;
-  z-index: 999;
+  z-index: $tn-z-main-nav;
   overflow: hidden;
   width: 60px;
   height: 100%;
-
-
-
   nav.main-nav {
     overflow-x: hidden;
     overflow-y: auto;
@@ -43,68 +37,53 @@
     background: $tn-nav;
     text-transform: uppercase;
     font-weight: 300;
-    font-size: 12px;
+    font-size: $tn-font-small;
     font-family: $tn-open-sans;
-
     ul {
       margin: 0;
       padding: 0;
-
       li {
         padding: 0;
         background: $tn-primary;
-
         a {
-          @include transition(all .2s ease);
+          @include transition(all 0.2s ease);
           display: block;
-          padding: 14px 16px;
+          padding: $tn-padding;
           border-bottom: 1px solid $tn-sidebar;
           background: $tn-nav;
           color: $tn-grey;
-
           &.active {
             position: relative;
             left: 5px;
-            // padding-left: 15px;
-            // border-left: 5px solid $tn-primary;
             padding-left: 11px;
           }
-
           &:hover, &.active {
             background: $tn-sidebar;
             color: #fff;
             text-decoration: none;
           }
-
           &.toggle-menu {
             border-top: 0;
           }
         }
-
         i {
           position: relative;
           top: 1px;
           display: inline-block;
-          // padding: 0 40px 0 0;
-          // width: 35px;
-          margin-right: 16px;
+          margin-right: $tn-margin;
           text-align: center;
           font-size: 22px;
-
           &.right {
             float: right;
             padding: 0;
             width: auto;
           }
         }
-
         ul {
           padding: 0;
           border-bottom: 0;
         }
-
         li {
-
           a {
             padding: 10px 20px 10px 50px;
             border-top: 0;
@@ -117,29 +96,25 @@
 }
 
 .page-wrap {
-  @include transition(margin-left .2s ease);
-
+  @include transition(margin-left 0.2s ease);
   @include media($mobile-breakpoint) {
     margin-left: 0;
   }
 
   position: relative;
-  z-index: 2;
+  z-index: $tn-z-page-wrap;
   margin-left: 60px;
   background: $tn-light-grey;
 }
 
 .menu-open {
-
   .page-wrap {
-
     @include media($mobile-breakpoint) {
       margin-left: 0;
     }
 
     margin-left: 250px;
   }
-
   nav.main-nav {
     left: 0;
   }
@@ -148,15 +123,13 @@
 // Submenu stuff
 
 nav.main-nav ul ul li {
-  @include transition(all .3s ease);
+  @include transition(all 0.3s ease);
   overflow-y: hidden;
   max-height: 0;
   background: $tn-dark-grey;
-  font-size: 12px;
-
+  font-size: $tn-font-small;
   li a {
     color: #fff;
-
     &:hover {
       background: $tn-med-grey;
     }
@@ -165,5 +138,5 @@ nav.main-nav ul ul li {
 
 .menu-open nav.main-nav ul ul.open li {
   max-height: 37px;
-  font-size: 12px;
+  font-size: $tn-font-small;
 }
