--- a/app/assets/stylesheets/tenon/ui/asset-uploads.css.scss
+++ b/app/assets/stylesheets/tenon/ui/asset-uploads.css.scss
@@ -17,7 +17,7 @@
       height: 24px;
       color: #fff;
       font-weight: 600;
-      font-size: 12px;
+      font-size: $tn-font-small;
       line-height: 24px;
     }
 
