--- a/app/assets/stylesheets/tenon/ui/comments.css.scss
+++ b/app/assets/stylesheets/tenon/ui/comments.css.scss
@@ -24,7 +24,7 @@
     }
 
     p {
-      margin-bottom: 16px;
+      margin-bottom: $tn-margin;
     }
   }
 
@@ -34,7 +34,7 @@
   }
 
   .comment {
-    padding: 16px 0;
+    padding: $tn-padding 0;
     border-top: 1px solid;
 
     .avatar {
