--- a/app/assets/stylesheets/tenon/ui/forms.css.scss
+++ b/app/assets/stylesheets/tenon/ui/forms.css.scss
@@ -1,11 +1,11 @@
 .fields {
-  margin-bottom: 16px;
+  margin-bottom: $tn-margin;
   padding: 0;
   border: 0;
 
   .form-group {
     clear: both;
-    margin: 16px 0;
+    margin: $tn-margin 0;
 
     &:first-child {
       margin-top: 0;
@@ -28,7 +28,7 @@
 .explanation {
   color: $tn-dark-grey;
   font-style: italic;
-  font-size: 12px;
+  font-size: $tn-font-small;
 }
 
 label, input[type=text], input[type=password], textarea, .explanation, h4.box-label {
@@ -44,13 +44,13 @@ label, h4.box-label {
   color: $tn-box-label;
   text-transform: uppercase;
   font-weight: normal;
-  font-size: 12px;
+  font-size: $tn-font-small;
   line-height: 18px;
 }
 
 input[type=text], input[type=password] {
   height: 40px;
-  font-size: 16px;
+  font-size: $tn-font-large;
 }
 
 .tn-checkbox {
@@ -87,7 +87,7 @@ input[type=text], input[type=password] {
     height: auto;
     color: $tn-dark-grey;
     font-weight: bold;
-    font-size: 12px;
+    font-size: $tn-font-small;
 
     &:focus {
       outline: none;
@@ -97,7 +97,7 @@ input[type=text], input[type=password] {
 
   label {
     color: $tn-label;
-    font-size: 12px;
+    font-size: $tn-font-small;
     line-height: 18px;
   }
 
@@ -110,7 +110,7 @@ input[type=text], input[type=password] {
     color: $tn-dark-grey;
     text-align: right;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: $tn-font-small;
   }
 }
 
@@ -155,7 +155,7 @@ input[type=text], input[type=password] {
     background: $tn-white;
     padding: 3px 5px;
     height: 40px;
-    font-size: 16px;
+    font-size: $tn-font-large;
     line-height: 34px;
 
     a.select2-choice {
