--- a/app/assets/stylesheets/tenon/ui/modals.css.scss
+++ b/app/assets/stylesheets/tenon/ui/modals.css.scss
@@ -8,7 +8,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1040;
+  z-index: $tn-z-modal;
   display: none;
   overflow: hidden;
 }
@@ -26,7 +26,7 @@
 
 .modal-dialog {
   position: relative;
-  z-index: 1050;
+  z-index: $tn-z-modal-dialog;
   overflow-x: hidden;
   overflow-y: auto;
   margin: 0;
@@ -40,7 +40,7 @@
   @include media($tablet-breakpoint) {
     @include transform(translate(-50%, 0));
     position: fixed;
-    top: 16px;
+    top: $tn-margin;
     left: 50%;
     width: 600px;
   }
@@ -53,7 +53,7 @@
   overflow-x: hidden;
   overflow-y: auto;
   outline: none;
-  border-radius: 2px;
+  border-radius: 4px;
   background-color: $tn-light-grey;
 
   h5 {
@@ -68,7 +68,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1030;
+  z-index: $tn-z-modal-backdrop;
   background-color: #000;
 }
 
@@ -103,7 +103,7 @@
 
 .modal-body {
   position: relative;
-  padding: 16px;
+  padding: $tn-padding;
   hr {
     height: 1px;
     background-color: $tn-med-grey;
@@ -111,7 +111,7 @@
 }
 
 .modal-footer {
-  padding: 0 16px 16px;
+  padding: 0 $tn-padding $tn-padding;
   text-align: right;
 }
 
