--- a/app/assets/stylesheets/tenon/ui/progress-bars.css.scss
+++ b/app/assets/stylesheets/tenon/ui/progress-bars.css.scss
@@ -48,7 +48,7 @@
 
 .progress {
   overflow: hidden;
-  margin-bottom: 16px;
+  margin-bottom: $tn-margin;
   height: 20px;
   border-radius: 4px;
   background-color: #f5f5f5;
@@ -65,7 +65,7 @@
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   color: #fff;
   text-align: center;
-  font-size: 12px;
+  font-size: $tn-font-small;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
