--- a/app/assets/stylesheets/tenon/ui/record-lists.css.scss
+++ b/app/assets/stylesheets/tenon/ui/record-lists.css.scss
@@ -40,7 +40,7 @@ ul.record-list {
     .header {
       color: $tn-primary-text;
       text-transform: uppercase;
-      font-size: 12px;
+      font-size: $tn-font-small;
     }
   }
 
@@ -78,10 +78,6 @@ ul.record-list {
       right: 0;
       width: 200px;
       text-align: right;
-
-      i {
-        font-size: 20px;
-      }
 
       a {
         margin: 0;
