--- a/app/assets/stylesheets/tenon/ui/section-headers.css.scss
+++ b/app/assets/stylesheets/tenon/ui/section-headers.css.scss
@@ -1,5 +1,4 @@
 header {
-
   @include media($mobile-breakpoint) {
     position: static;
     top: 0;
@@ -13,64 +12,55 @@ header {
   }
 
   left: 0;
-  z-index: 997;
+  z-index: $tn-z-section-header;
   width: 100%;
   border-bottom: 1px solid $tn-med-grey;
   background: $tn-light-grey;
   color: $tn-slate;
-  font-size: 13px;
-
+  font-size: $tn-font-small;
   h1 {
     float: left;
     margin: 0;
-    padding: 16px;
+    padding: $tn-padding;
     font-weight: normal;
     font-size: 18px;
     line-height: 18px;
   }
-
   .tools {
-
-    @include media($mobile-breakpoint) {
-      float: none;
-      clear: both;
-      border-top: 1px solid $tn-med-grey;
-      border-left: 0;
-      height: 50px;
-    }
-
-    @include media($tablet-breakpoint) {
-      float: right;
-    }
-
     position: relative;
-
+    float: right;
+    #sidebar-toggle {
+      @include media($tablet-breakpoint) {
+        display: none;
+      }
+    }
+    i {
+      font-size: 20px;
+    }
+    .btn {
+      margin: 7px;
+    }
     input[type=text] {
       display: inline-block;
       margin: 0;
-      padding: 0 0 0 16px;
+      padding: 0 0 0 $tn-padding;
       height: 50px;
       border: 0;
       background: none;
       color: $tn-label;
-      font-size: 12px;
+      font-size: $tn-font-small;
       line-height: 30px;
     }
   }
-
   .header-tool {
-
-    @include media($mobile-breakpoint) {
-      border-right: 1px solid $tn-med-grey;
-      border-left: 0;
+    @include media($tablet-breakpoint) {
+      border-right: 0;
     }
 
     float: left;
     padding: 0;
-    height: 50px;
+    border-right: 1px solid $tn-med-grey;
     border-left: 1px solid $tn-med-grey;
-    vertical-align: middle;
-
     &:last-child {
       margin-right: 0;
     }
