--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -5,15 +5,20 @@
     %ul
       %li.hamburger
         = link_to '#', class: 'btn btn-primary' do
-          %i.fa.fa-fw.fa-bars
+          = fa_icon('fw bars')
 
       %li.user.header-tool.header-menu
         = link_to '#', class: 'user-menu' do
           = current_user.email
-          %i.fa.fa-fw.fa-caret-down
+          = fa_icon('fw caret-down')
 
         %ul
-          %li= link_to current_user.email, edit_user_path(current_user)
+          %li
+            = link_to edit_user_path(current_user) do
+              = current_user.email
+              = fa_icon('fw user')
+
           %li
             = link_to destroy_user_session_path, method: :delete do
-              %i.fa.fa-sign-out
+              Sign Out
+              = fa_icon('fw sign-out')
