--- a/app/assets/stylesheets/tenon/ui/section-headers.css.scss
+++ b/app/assets/stylesheets/tenon/ui/section-headers.css.scss
@@ -57,7 +57,7 @@ header {
       border-right: 0;
     }
 
-    float: left;
+    float: right;
     padding: 0;
     border-right: 1px solid $tn-med-grey;
     border-left: 1px solid $tn-med-grey;
