--- a/app/views/tenon/events/index.html.haml
+++ b/app/views/tenon/events/index.html.haml
@@ -2,7 +2,7 @@
   .sidebar
     .content
       %h2 Events
-      = link_to "New Event", new_event_path, class: 'btn btn-block btn-info'
+      = link_to "New Event", new_event_path, class: 'btn btn-block btn-primary'
 
 %header
   .container
