--- a/app/views/tenon/galleries/index.html.haml
+++ b/app/views/tenon/galleries/index.html.haml
@@ -2,7 +2,7 @@
   .sidebar
     .content
       %h2 Galleries
-      = link_to "New Gallery", new_gallery_path, class: 'btn btn-block btn-info'
+      = link_to "New Gallery", new_gallery_path, class: 'btn btn-block btn-primary'
 %header
   .container
     %h1 Galleries
