--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -43,7 +43,7 @@
         = f.text_field :publish_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
 
       .row.content
-        %button.btn.btn-primary.btn-block.submit Save
+        %button.btn.btn-comp.btn-block.submit Save
 
       - if @page.persisted?
         %hr
