--- a/app/views/tenon/settings/_general.html.haml
+++ b/app/views/tenon/settings/_general.html.haml
@@ -35,6 +35,6 @@
   %h4.box-label Actions
   .box
     .content
-      %button.btn.btn-primary.btn-block.submit Save
+      %button.btn.btn-comp.btn-block.submit Save
 
   .spacer
