--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -4,7 +4,7 @@
   %nav
     %ul
       %li.hamburger
-        = link_to '#', class: 'btn btn-primary' do
+        = link_to '#', class: 'btn btn-comp' do
           = fa_icon('fw bars')
 
       %li.user.header-tool.header-menu
