--- a/app/views/tenon/tenon_callouts/index.html.haml
+++ b/app/views/tenon/tenon_callouts/index.html.haml
@@ -2,7 +2,7 @@
   .sidebar
     .content
       %h2 Tenon Callouts
-      = link_to "New Tenon Callout", new_tenon_callout_path, class: 'btn btn-block btn-info'
+      = link_to "New Tenon Callout", new_tenon_callout_path, class: 'btn btn-block btn-primary'
 
 %header
   %h1 Tenon Callouts
