--- a/app/views/tenon/users/index.html.haml
+++ b/app/views/tenon/users/index.html.haml
@@ -2,7 +2,7 @@
   .sidebar
     .content
       %h2 Users
-      = link_to "New User", new_user_path, class: 'btn btn-block btn-info'
+      = link_to "New User", new_user_path, class: 'btn btn-block btn-primary'
 
 %header
   %h1 Users
