--- a/app/assets/stylesheets/tenon/ui/buttons.css.scss
+++ b/app/assets/stylesheets/tenon/ui/buttons.css.scss
@@ -1,4 +1,5 @@
 .btn {
+  @include user-select(none);
   display: inline-block;
   margin-bottom: 0;
   padding: 6px 12px;
@@ -9,373 +10,41 @@
   white-space: nowrap;
   font-weight: normal;
   font-size: $tn-font-normal;
-  line-height: 1.428571429;
+  line-height: 21px;
   cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-}
-
-.btn:focus {
-  outline: thin dotted #333;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-
-.btn:hover,
-
-.btn:focus {
-  color: #333;
-  text-decoration: none;
-}
-
-.btn:active,
-
-.btn.active {
-  outline: 0;
-  background-image: none;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-}
-
-.btn.disabled,
-.btn[disabled],
-
-fieldset[disabled] .btn {
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  opacity: 0.65;
-  filter: alpha(opacity = 65);
-  cursor: not-allowed;
-  pointer-events: none;
-}
-
-.btn-default {
-  border-color: #ccc;
-  background-color: #fff;
-  color: #333;
-}
-
-.btn-default:hover,
-.btn-default:focus,
-.btn-default:active,
-.btn-default.active,
-
-.open .dropdown-toggle.btn-default {
-  border-color: #adadad;
-  background-color: #ebebeb;
-  color: #333;
-}
-
-.btn-default:active,
-.btn-default.active,
-
-.open .dropdown-toggle.btn-default {
-  background-image: none;
-}
-
-.btn-default.disabled,
-.btn-default[disabled],
-fieldset[disabled] .btn-default,
-.btn-default.disabled:hover,
-.btn-default[disabled]:hover,
-fieldset[disabled] .btn-default:hover,
-.btn-default.disabled:focus,
-.btn-default[disabled]:focus,
-fieldset[disabled] .btn-default:focus,
-.btn-default.disabled:active,
-.btn-default[disabled]:active,
-fieldset[disabled] .btn-default:active,
-.btn-default.disabled.active,
-.btn-default[disabled].active,
-
-fieldset[disabled] .btn-default.active {
-  border-color: #ccc;
-  background-color: #fff;
+  &:hover, &:focus {
+    text-decoration: none;
+  }
+  &:focus {
+    outline: thin dotted #333;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+  }
+  &:active,
+  &.active {
+    outline: 0;
+    background-image: none;
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  }
+  &.disabled {
+    box-shadow: none;
+    opacity: 0.65;
+    filter: alpha(opacity = 65);
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
 
 .btn-primary {
-  border-color: darken($tn-button-primary-bg, 0.5%);
-  background-color: $tn-button-primary-bg;
-  color: $tn-button-primary-fg;
+  @include button($border-color: $tn-button-primary-bg, $background-color: $tn-button-primary-bg, $color: $tn-button-primary-fg, $highlight-border-color: darken($tn-button-primary-bg, 5%), $highlight-background-color: darken($tn-button-primary-bg, 5%));
 }
 
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-
-.open .dropdown-toggle.btn-primary {
-  border-color: darken($tn-button-primary-bg, 6%);
-  background-color: darken($tn-button-primary-bg, 5%);
-  color: #fff;
+.btn-comp {
+  @include button($border-color: $tn-button-info-bg, $background-color: $tn-button-info-bg, $color: $tn-button-info-fg, $highlight-border-color: darken($tn-button-info-bg, 5%), $highlight-background-color: darken($tn-button-info-bg, 5%));
 }
 
-.btn-primary:active,
-.btn-primary.active,
-
-.open .dropdown-toggle.btn-primary {
-  background-image: none;
-}
-
-.btn-primary.disabled,
-.btn-primary[disabled],
-fieldset[disabled] .btn-primary,
-.btn-primary.disabled:hover,
-.btn-primary[disabled]:hover,
-fieldset[disabled] .btn-primary:hover,
-.btn-primary.disabled:focus,
-.btn-primary[disabled]:focus,
-fieldset[disabled] .btn-primary:focus,
-.btn-primary.disabled:active,
-.btn-primary[disabled]:active,
-fieldset[disabled] .btn-primary:active,
-.btn-primary.disabled.active,
-.btn-primary[disabled].active,
-
-fieldset[disabled] .btn-primary.active {
-  border-color: #357ebd;
-  background-color: #428bca;
-}
-
-.btn-warning {
-  border-color: #eea236;
-  background-color: #f0ad4e;
-  color: #fff;
-}
-
-.btn-warning:hover,
-.btn-warning:focus,
-.btn-warning:active,
-.btn-warning.active,
-
-.open .dropdown-toggle.btn-warning {
-  border-color: #d58512;
-  background-color: #ed9c28;
-  color: #fff;
-}
-
-.btn-warning:active,
-.btn-warning.active,
-
-.open .dropdown-toggle.btn-warning {
-  background-image: none;
-}
-
-.btn-warning.disabled,
-.btn-warning[disabled],
-fieldset[disabled] .btn-warning,
-.btn-warning.disabled:hover,
-.btn-warning[disabled]:hover,
-fieldset[disabled] .btn-warning:hover,
-.btn-warning.disabled:focus,
-.btn-warning[disabled]:focus,
-fieldset[disabled] .btn-warning:focus,
-.btn-warning.disabled:active,
-.btn-warning[disabled]:active,
-fieldset[disabled] .btn-warning:active,
-.btn-warning.disabled.active,
-.btn-warning[disabled].active,
-
-fieldset[disabled] .btn-warning.active {
-  border-color: #eea236;
-  background-color: #f0ad4e;
-}
-
-.btn-danger {
-  border-color: #d43f3a;
-  background-color: #d9534f;
-  color: #fff;
-}
-
-.btn-danger:hover,
-.btn-danger:focus,
-.btn-danger:active,
-.btn-danger.active,
-
-.open .dropdown-toggle.btn-danger {
-  border-color: #ac2925;
-  background-color: #d2322d;
-  color: #fff;
-}
-
-.btn-danger:active,
-.btn-danger.active,
-
-.open .dropdown-toggle.btn-danger {
-  background-image: none;
-}
-
-.btn-danger.disabled,
-.btn-danger[disabled],
-fieldset[disabled] .btn-danger,
-.btn-danger.disabled:hover,
-.btn-danger[disabled]:hover,
-fieldset[disabled] .btn-danger:hover,
-.btn-danger.disabled:focus,
-.btn-danger[disabled]:focus,
-fieldset[disabled] .btn-danger:focus,
-.btn-danger.disabled:active,
-.btn-danger[disabled]:active,
-fieldset[disabled] .btn-danger:active,
-.btn-danger.disabled.active,
-.btn-danger[disabled].active,
-
-fieldset[disabled] .btn-danger.active {
-  border-color: #d43f3a;
-  background-color: #d9534f;
-}
-
-.btn-success {
-  border-color: #4cae4c;
-  background-color: #5cb85c;
-  color: #fff;
-}
-
-.btn-success:hover,
-.btn-success:focus,
-.btn-success:active,
-.btn-success.active,
-
-.open .dropdown-toggle.btn-success {
-  border-color: #398439;
-  background-color: #47a447;
-  color: #fff;
-}
-
-.btn-success:active,
-.btn-success.active,
-
-.open .dropdown-toggle.btn-success {
-  background-image: none;
-}
-
-.btn-success.disabled,
-.btn-success[disabled],
-fieldset[disabled] .btn-success,
-.btn-success.disabled:hover,
-.btn-success[disabled]:hover,
-fieldset[disabled] .btn-success:hover,
-.btn-success.disabled:focus,
-.btn-success[disabled]:focus,
-fieldset[disabled] .btn-success:focus,
-.btn-success.disabled:active,
-.btn-success[disabled]:active,
-fieldset[disabled] .btn-success:active,
-.btn-success.disabled.active,
-.btn-success[disabled].active,
-
-fieldset[disabled] .btn-success.active {
-  border-color: #4cae4c;
-  background-color: #5cb85c;
-}
-
-.btn-info {
-  border-color: darken($tn-button-info-bg, 0.5%);
-  background-color: $tn-button-info-bg;
-  color: $tn-button-info-fg;
-}
-
-.btn-info:hover,
-.btn-info:focus,
-.btn-info:active,
-.btn-info.active,
-
-.open .dropdown-toggle.btn-info {
-  border-color: darken($tn-button-info-bg, 5.5%);
-  background-color: darken($tn-button-info-bg, 5%);
-  color: #fff;
-}
-
-.btn-info:active,
-.btn-info.active,
-
-.open .dropdown-toggle.btn-info {
-  background-image: none;
-}
-
-.btn-info.disabled,
-.btn-info[disabled],
-fieldset[disabled] .btn-info,
-.btn-info.disabled:hover,
-.btn-info[disabled]:hover,
-fieldset[disabled] .btn-info:hover,
-.btn-info.disabled:focus,
-.btn-info[disabled]:focus,
-fieldset[disabled] .btn-info:focus,
-.btn-info.disabled:active,
-.btn-info[disabled]:active,
-fieldset[disabled] .btn-info:active,
-.btn-info.disabled.active,
-.btn-info[disabled].active,
-
-fieldset[disabled] .btn-info.active {
-  border-color: #46b8da;
-  background-color: #5bc0de;
-}
-
-.btn-link {
-  border-radius: 0;
-  color: #428bca;
-  font-weight: normal;
-  cursor: pointer;
-}
-
-.btn-link,
-.btn-link:active,
-.btn-link[disabled],
-
-fieldset[disabled] .btn-link {
-  background-color: transparent;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
-.btn-link,
-.btn-link:hover,
-.btn-link:focus,
-
-.btn-link:active {
-  border-color: transparent;
-}
-
-.btn-link:hover,
-
-.btn-link:focus {
-  background-color: transparent;
-  color: #2a6496;
-  text-decoration: underline;
-}
-
-.btn-link[disabled]:hover,
-fieldset[disabled] .btn-link:hover,
-.btn-link[disabled]:focus,
-
-fieldset[disabled] .btn-link:focus {
-  color: #999;
-  text-decoration: none;
-}
-
-.btn-lg {
-  padding: 10px $tn-padding;
-  border-radius: 6px;
-  font-size: 18px;
-  line-height: 1.33;
-}
-
-.btn-sm,
-
-.btn-xs {
-  padding: 5px 10px;
-  border-radius: 3px;
-  font-size: $tn-font-small;
-  line-height: 1.5;
-}
-
-.btn-xs {
-  padding: 1px 5px;
+.btn-white {
+  @include button($border-color: #ccc, $background-color: #fff, $color: #333, $highlight-border-color: #adadad, $highlight-background-color: #ebebeb);
 }
 
 .btn-block {
@@ -383,15 +52,13 @@ fieldset[disabled] .btn-link:focus {
   padding-right: 0;
   padding-left: 0;
   width: 100%;
-}
-
-.btn-block + .btn-block {
-  margin-top: 5px;
+  & + .btn-block {
+    margin-top: 5px;
+  }
 }
 
 input[type="submit"].btn-block,
 input[type="reset"].btn-block,
-
 input[type="button"].btn-block {
   width: 100%;
 }
