--- a/app/views/tenon/events/_form.html.haml
+++ b/app/views/tenon/events/_form.html.haml
@@ -2,7 +2,7 @@
   .sidebar
     .content
       %h2 Events
-      = link_to "New Event", new_event_path, class: 'btn btn-block btn-info'
+      = link_to "New Event", new_event_path, class: 'btn btn-block btn-primary'
 
 = error_messages_for :event
 
@@ -27,4 +27,4 @@
         = f.text_field :publish_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
 
       .row.content
-        %button.btn.btn-primary.btn-block.submit Save
+        %button.btn.btn-comp.btn-block.submit Save
