--- a/app/views/tenon/galleries/_form.html.haml
+++ b/app/views/tenon/galleries/_form.html.haml
@@ -2,7 +2,7 @@
   .sidebar
     .content
       %h2 Galleries
-      = link_to "New Gallery", new_gallery_path, class: 'btn btn-block btn-info'
+      = link_to "New Gallery", new_gallery_path, class: 'btn btn-block btn-primary'
 
 = error_messages_for :gallery
 
@@ -14,7 +14,7 @@
     .form-group
       %p
         = link_to_add_association "Add another photo", f, :photos, 'data-association-insertion-node' => '#photo-list', 'data-association-insertion-method' => 'append'
-        = link_to 'Add several', new_item_asset_path(multiple: true), class: 'btn btn-primary browse', data: {'modal-remote' => true, 'modal-title' => "Select file", 'modal-handler' => 'Tenon.features.MultipleAssetAttachment', target: '.asset-fields' }
+        = link_to 'Add several', new_item_asset_path(multiple: true), class: 'btn btn-comp browse', data: {'modal-remote' => true, 'modal-title' => "Select file", 'modal-handler' => 'Tenon.features.MultipleAssetAttachment', target: '.asset-fields' }
 
       %ul.nested-field-list.sortable#photo-list
         = f.nested_fields :photo
@@ -23,4 +23,4 @@
     %h4.box-label Publish
     .box
       .content
-        = f.submit 'Save', class: 'btn btn-block btn-primary'
+        = f.submit 'Save', class: 'btn btn-block btn-comp'
