--- a/app/views/tenon/index/index.html.haml
+++ b/app/views/tenon/index/index.html.haml
@@ -25,4 +25,4 @@
         .callout-content= raw callout.content
         - if callout.uri.present?
           %p
-            = link_to callout.button_text, callout.uri, class: "btn btn-info", target: ("_" if callout.new_window)
+            = link_to callout.button_text, callout.uri, class: "btn btn-primary", target: ("_" if callout.new_window)
