--- a/app/views/tenon/item_assets/new.html.haml
+++ b/app/views/tenon/item_assets/new.html.haml
@@ -7,7 +7,7 @@
       .fields.full
         .form-group
           .browse-button-holder.solo
-            .fileupload.btn.btn-primary.browse
+            .fileupload.btn.btn-comp.browse
               %span#choose-files Browse
               %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
       .spacer
