--- a/app/views/tenon/posts/_form.html.haml
+++ b/app/views/tenon/posts/_form.html.haml
@@ -51,7 +51,7 @@
         = f.text_field :created_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
 
       .row.content
-        %button.btn.btn-primary.btn-block.submit Save
+        %button.btn.btn-comp.btn-block.submit Save
       - if @post.persisted?
         %hr
         .content
