renamed -button-info-x variables to -button-comp-x

--- a/app/assets/stylesheets/tenon/colors-custom.css.scss
+++ b/app/assets/stylesheets/tenon/colors-custom.css.scss
@@ -11,8 +11,8 @@ $tn-sidebar-highlight: #3a3848;
 $tn-button-primary-bg: $tn-primary;
 $tn-button-primary-fg: #fff;
 
-$tn-button-info-bg: #978fcc;
-$tn-button-info-fg: #fff;
+$tn-button-comp-bg: #978fcc;
+$tn-button-comp-fg: #fff;
 
 $tn-box-label: #04555d;
 $tn-label: #162433;
