updated -comp color

--- a/app/assets/stylesheets/tenon/colors-custom.css.scss
+++ b/app/assets/stylesheets/tenon/colors-custom.css.scss
@@ -3,7 +3,7 @@
 // Change these on a per-site basis
 $tn-client-color: #9c0f17;
 $tn-primary: #ff6a00;
-$tn-comp: #43239a;
+$tn-comp: #8579c0;
 $tn-nav: #12111a;
 $tn-sidebar: #242133;
 $tn-sidebar-highlight: #3a3848;
@@ -11,7 +11,7 @@ $tn-sidebar-highlight: #3a3848;
 $tn-button-primary-bg: $tn-primary;
 $tn-button-primary-fg: #fff;
 
-$tn-button-comp-bg: #978fcc;
+$tn-button-comp-bg: $tn-comp;
 $tn-button-comp-fg: #fff;
 
 $tn-box-label: #04555d;
