incorporating new Tenon nav and section header styling

--- a/app/assets/stylesheets/tenon/colors-custom.css.scss
+++ b/app/assets/stylesheets/tenon/colors-custom.css.scss
@@ -3,7 +3,7 @@
 // Change these on a per-site basis
 $tn-client-color: #9c0f17;
 $tn-primary: #ff6a00;
-$tn-comp: #8579c0;
+$tn-comp: #978fcc;
 $tn-nav: #12111a;
 $tn-sidebar: #242133;
 $tn-sidebar-highlight: #3a3848;
