--- a/app/assets/stylesheets/tenon/layout/util-nav.css.scss
+++ b/app/assets/stylesheets/tenon/layout/util-nav.css.scss
@@ -78,7 +78,7 @@
         }
         & > a {
           display: inline-block;
-          text-align: center;
+          text-align: left;
         }
       }
     }
