--- a/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
@@ -1,5 +1,7 @@
 .four-column-image
-  - row.pieces.each do |piece|
-    .tn-tc-piece.three{class: cycle('', '', '', 'omega')}
-      = render "tenon/tenon_content/piece_types/display/image", piece: piece
+  - row.pieces.each_slice(2) do |group|
+    .tn-tc-piece.six{class: cycle('', 'omega')}
+      - group.each do |piece|
+        .tn-tc-piece.three{class: cycle('', 'omega')}
+          = render "tenon/tenon_content/piece_types/display/image", piece: piece
   .spacer
