--- a/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
@@ -2,6 +2,6 @@
   - row.pieces.each_slice(2) do |group|
     .tn-tc-piece.six{class: cycle('', 'omega')}
       - group.each do |piece|
-        .tn-tc-piece.six{class: cycle('', 'omega')}
+        .tn-tc-piece.nested.six
           = render "tenon/tenon_content/piece_types/display/image", piece: piece
   .spacer
