reconfigure four column image display grid: back to the beginning

--- a/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
@@ -1,7 +1,5 @@
 .four-column-image
-  - row.pieces.each_slice(2) do |group|
-    .tn-tc-piece.six{class: cycle('', 'omega')}
-      - group.each do |piece|
-        .tn-tc-piece.nested.six
-          = render "tenon/tenon_content/piece_types/display/image", piece: piece
+  - row.pieces.each do |piece|
+    .tn-tc-piece.four{class: cycle('', '', '', 'omega')}
+      = render "tenon/tenon_content/piece_types/display/image", piece: piece
   .spacer
